--- a/zen garden/style.css
+++ b/zen garden/style.css
@@ -5,7 +5,32 @@
 .UI/UX-4-hex { color: #D9D9D9; }
 .principal { color: #F2F2F2; }
 
-html{
+html {
     background-color: #262626;
     color: #F2F2F2;
+    font-family: sans-serif;
+    font-size: 18px;
 }
+
+p {
+    text-indent: 1em;
+}
+
+h1 {
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+h2 {
+    text-align: center;
+    font-size: 1.4rem;
+}
+
+h3 {
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+.summary {text-align: center;}
+.main p {line-height: 1.5;}
+abbr {font-variant: small-caps;}
